# hotels-application

./: Dockerfile  Makefile  README.md  docker-compose.yaml  prometheus.yml  pyproject.toml
app/: .env  .env.example  auth_sqladmin.py  database.py  email_templates.py  exceptions.py  logger.py  main.py
app/admin/: views.py
app/bookings/: __init__.py  dao.py  models.py  router.py  schemas.py
app/config/: auth.py  base.py  celery.py  database.py  sentry.py  smtp.py
app/dao/: base.py
app/hotels/: __init__.py  dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: __init__.py  router.py
app/migrations/: env.py
app/migrations/versions/: b27e73c40148_added_models.py  fdd20817919f_create_model_hotels.py
app/pages/: __init__.py  router.py
app/rooms/: models.py
app/tasks_celery/: celery_config.py  scheduled.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration/test_bookings/: test_bookings_.py
app/tests/integration/test_users/: test_api.py
app/tests/unit/: test_dao.py
app/users/: __init__.py  auth.py  dependencies.py  models.py  router.py
